tests/errors/compiler/dot_in_enum/dot_in_enum_1.c
enum : int
{
	a,
	b,
	c
} tmp;

int main()
{
	int num = tmp.a;
	return 0;
}